<resources>
    <string name="app_name" translatable="false">aYourls</string>
    <string name="share">Short URL with aYourls</string>


    <string name="unknown">unknown</string>
    <string name="retry">Retry</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>


    <string name="nolinks_help">There are no links yet. After you configured your server in settings you can add or import some.</string>

    <string name="action_import">Import from server</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_copy">Copy</string>
    <string name="action_browser">Open in browser</string>
    <string name="action_about">About this app</string>

    <string name="service_clipboard_notification_title" translatable="false">@string/app_name</string>
    <string name="service_clipboard_notification_text">Monitoring your clipboard for URLs.</string>
    <string name="service_clipboard_notification_text_long">%1$s You can deactivate the clipboard monitor in app settings.</string>

    <string name="dialog_about_version">Version %1$s</string>
    <string name="dialog_about_website">Website</string>
    <string name="dialog_about_rate">Rate this app</string>

    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_no_connection_message">No network connection.</string>
    <string name="dialog_error_no_valid_url">No valid URL!</string>

    <string name="dialog_check_server_title">Checking server</string>
    <string name="dialog_check_server_message">Please wait…</string>
    <string name="dialog_check_server_success_title">Successfully connected</string>
    <string name="dialog_check_server_success_message">Your server contains %1$d links with %2$d clicks.</string>

    <string name="dialog_confirm_shortening_title">URL Shortening</string>
    <string name="dialog_confirm_shortening_message">Do you really want to shorten this URL?\n\n%1$s</string>

    <string name="dialog_confirm_delete_title">Delete</string>
    <string name="dialog_confirm_delete_message">Do you really want to delete this URL?</string>
    <string name="dialog_confirm_delete_also_on_server">Delete on server</string>

    <string name="dialog_error_message">An error has occurred:\n\n%1$s</string>

    <string name="dialog_error_shortening_title">URL Shortening Error</string>
    <string name="dialog_error_shortening_message">An error has occurred during the shortening of the URL:\n\n%1$s</string>

    <string name="dialog_error_nosetup_title">No setup for yourls server</string>
    <string name="dialog_error_nosetup_message">You first have to set up your YOURLS server in aYourls settings before you can shorten URLs.</string>

    <string name="dialog_error_delete_api_missing">Delete is not working on your server. It seems like there is no delete api plugin installed.</string>

    <string name="dialog_add_url_hint">URL to short</string>
    <string name="dialog_add_keyword_hint">Shorturl keyword (optional)</string>
    <string name="dialog_add_title_hint">Title (optional)</string>

    <string name="snack_link_import_inserted">%1$s imported.</string>
    <string name="snack_link_import_updated">%1$s updated.</string>
    <string name="snack_link_import_error">Error importing %1$s.</string>

    <string name="toast_added_to_clipboard">%1$s copied to clipboard</string>

    <string name="pref_cat_server_settings">Server settings</string>

    <string name="pref_server_url_title">Yourls URL</string>
    <string name="pref_server_url_summary">URL to your Yourls installation - %s</string>
    <string name="pref_server_url_summary_empty">URL to your Yourls installation, e.g. http://your-short-url.xy</string>
    <string name="pref_server_url_hint" translatable="false">http://your-short-url.xy</string>

    <string name="pref_server_token_title" translatable="false">Signature Token</string>
    <string name="pref_server_token_summary">The token can be found on Yourls Tab "Tools".</string>
    <string name="pref_server_token_hint" translatable="false">xxxx123xxxx</string>

    <string name="pref_server_check_title">Check server credentials</string>
    <string name="pref_server_check_summary">Connects to your installation to prove your credentials are working.</string>

    <string name="pref_cat_app_settings">App settings</string>

    <string name="pref_app_clipboard_monitor_title">Clipboard monitor</string>
    <string name="pref_app_clipboard_monitor_summary">Checking clipboard for URL. Works only on Android 3 and newer.</string>

    <string name="pref_app_clipboard_replace_title">Replace clipboard content</string>
    <string name="pref_app_clipboard_replace_summary">Always replace the clipboard content with new short url.</string>

    <string name="pref_app_delete_server_default_title">Delete on server as default</string>
    <string name="pref_app_delete_server_default_summary">On the delete confirm dialog "Delete on server" will be checked as default.</string>


    <plurals name="viewmodel_clicks">
        <item quantity="zero">no clicks</item>
        <item quantity="one">%1$d click</item>
        <item quantity="other">%1$d clicks</item>
    </plurals>


    <string name="transition_name_qrimage" translatable="false">transQrImage</string>


</resources>
