<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".linkdetail.LinkDetailActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sync_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:icon="@drawable/ic_content_copy_24dp"
        android:title="@string/action_copy"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/action_share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/action_delete"
        app:showAsAction="always"/>

</menu>